src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__bool_true.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 1
  .code
  0  ltrue r0
  1  ret
