src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__call_block_terminator.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module
do {
  let v = nil

  v(v)
}

nil

OK
.fn @main
  params 0
  stack 4
  .locals
    v = r1
  .code
  0  lnil r1
  1  mov r3, r1
  2  call r2, r1, 1   ; dyn
  3  lnil r0
  4  ret
