src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__compare_expr_ge.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let a = 0
let b = 1

a >= b

OK
.fn @main
  params 0
  stack 3
  .locals
    a = r1
    b = r2
  .code
  0  lsmi r1, 0
  1  lsmi r2, 1
  2  isgev r0, r1, r2
  3  ret
