src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__const_eval_div_by_zero.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
1 / 0


ERROR
evaluation would fail: cannot divide by zero
1 |  1 / 0
  |  ^^^^^
