src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__const_eval_type_mismatch.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
1 + "test"


ERROR
evaluation would fail with a type mismatch: cannot add int and str
1 |  1 + "test"
  |  ^^^^^^^^^^
